--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,3 +9,4 @@
 @import "components/hero.css";
 @import "components/menu.css";
 @import "components/article.css";
+@import "components/timeline.css";
