--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -75,7 +75,7 @@ body {
     background-color: var(--noir-bleuté);
     background-image: url('/assets/img/fond.avif');
     background-size: 150%;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
 
     padding: 4rem 2rem;
