--- a/src/css/components/article.css
+++ b/src/css/components/article.css
@@ -37,3 +37,21 @@
     object-fit: cover;
     margin: 1rem 0;
 }
+
+.physics-theory {
+    background-color: var(--noir-bleuté);
+    padding: 1rem 2rem;
+    text-align: center;
+    color: var(--or-foncé);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.physics-description {
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--or-pâle);
+    margin: 0;
+}
