--- a/src/css/components/card.css
+++ b/src/css/components/card.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    text-align: left;
     gap: 1rem;
     margin-bottom: 3rem;
     border: 3px solid var(--or-pâle);
