--- a/src/css/components/card.css
+++ b/src/css/components/card.css
@@ -98,3 +98,11 @@
     margin-bottom: 1rem;
 }
 
+.citation {
+    font-family: 'Hanken Grotesk', serif;
+    color: var(--vert-céladon);
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: center;
+    font-style: italic;
+}
