--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,3 +10,4 @@
 @import "components/menu.css";
 @import "components/article.css";
 @import "components/timeline.css";
+@import "components/carousel.css";
