--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,3 +11,4 @@
 @import "components/article.css";
 @import "components/timeline.css";
 @import "components/carousel.css";
+@import "components/project.css";
