--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,3 +12,4 @@
 @import "components/timeline.css";
 @import "components/carousel.css";
 @import "components/project.css";
+@import "components/contact.css";
