--- a/src/css/components/card.css
+++ b/src/css/components/card.css
@@ -103,6 +103,13 @@
     margin-bottom: 1rem;
 }
 
+.card img.projet {
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+    margin-bottom: 1rem;
+}
+
 .citation {
     font-family: 'Hanken Grotesk', serif;
     color: var(--vert-céladon);
