--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -26,8 +26,8 @@
     align-items: center;
     gap: 0.5rem;
 
-    background-color: var(--or-pâle);
-    border: 1px solid var(--noir-bleuté);
+    background-color: var(--vert-céladon);
+    border: 1px solid var(--or-pâle);
     padding: 0.6rem 1rem;
     border-radius: 6px;
     font-family: 'Hanken Grotesk', sans-serif;
@@ -35,7 +35,7 @@
     color: var(--noir-bleuté);
     text-decoration: none;
     font-weight: 500;
-    box-shadow: 2px 2px 0 var(--noir-bleuté);
+    box-shadow: 2px 2px 0 var(--or-pâle);
     transition: transform 0.2s ease;
     z-index: 2;
 }
